Atualiza conteudo do HTML para Ola, Mundo

--- a/site/index.html
+++ b/site/index.html
@@ -1,2 +1,3 @@
 <!-- site/index.html -->
-<h1>Olá, Márcio! Este site foi implantado via CI/CD.</h1><!-- site/index.html -->
+	<h1>Ola, Mundo!</h1> 
+<!-- site/index.html -->
